test/tests/integration/fixtures/tags/import/syntax_error/index.twig

{% import 'forms.twig' %}

{{ macros.parent() }}
